# Bookkeeper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
src/: VulkanBackend.cpp  VulkanBackend.h  app.cpp  app.h  main.cpp
src/Data/: Data.h  Image.cpp  Image.h
